Fix backend compilation for catalog deletion